--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="wi">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles/style.css">
     <title>Axit</title>
 </head>
@@ -20,11 +20,11 @@
     <div class="container row">
         <div class="header__logo"></div>
         <nav class="header__content">
-            <a class="header__indent"  href="#">Features</a>
-            <a class="header__indent"  href="#">About</a>
-            <a class="header__indent" href="#">Pricing</a>
-            <a class="header__indent"  href="#">Reviews</a>
-            <a href="#">Contact</a>
+            <a class="header__indent _transform-scale-color"  href="#">Features</a>
+            <a class="header__indent _transform-scale-color"  href="#">About</a>
+            <a class="header__indent _transform-scale-color " href="#">Pricing</a>
+            <a class="header__indent _transform-scale-color"  href="#">Reviews</a>
+            <a  class="_transform-scale-color" href="#">Contact</a>
         </nav>
     </div>
 </header>
@@ -36,7 +36,7 @@
                 <img src="./assets/image/logo-1.png" alt="logo">
             <h2 class="_left_white main__width-h2">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h2>
             <p class="_light main__width-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
-            <button class="button _outline">Download</button>
+            <a class="button _outline button_transform-scale">Download</a>
             </div>
             <div class="cell main__width _text-center">
                 <div class="main__border_try">
@@ -49,7 +49,7 @@
                         <input class="main__field" type="password" placeholder="Password" name="password">
                     </div>
                     <div>
-                    <button class="button main__button_get">Get Started</button>
+                    <button  class="button main__button_get button_transform-color ">Get Started</button>
                     </div>
                 </form>
             </div>
@@ -103,7 +103,7 @@
                 <h3>Tabs with soft transitioning effect.</h3>
                 <p class="tabs__indent1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
                 <p class="tabs__indent2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
-               <button class="button">Download</button>
+               <a class="button button_transform-scale">Download</a>
             </div>
             <div class="cell">
                 <img class="tabs__img" src="./assets/image/city2.png" alt="city">
@@ -236,7 +236,7 @@
         <div class="container">
             <h2 class="__white">Stylish axure design</h2>
             <p class="_light">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
-            <button class="button _outline">Download</button>
+            <a class="button _outline button_transform-scale">Download</a>
         </div>
     </div>
 </section>
@@ -255,7 +255,7 @@
                 <textarea class="contact__field" name="message" rows="7" placeholder="Massage"></textarea>
             </div>
             </div>
-                <button class="button ">Send Message</button>
+                <button class="button button_transform-scale ">Send Message</button>
         </form>
     </div>
 
