--- a/index.html
+++ b/index.html
@@ -67,28 +67,41 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <p>Aenean euismod bibendum laoreet</p>
         </div>
-        <svg  class="icon facebook social_media__icon">
-            <a class="media" href="#"><use href="#facebook"></use></a>
-        </svg>
-        <svg  class="icon social_media__icon">
-            <a class="media" href="#"><use href="#twitter"></use></a>
-        </svg>
-        <svg  class="icon social_media__icon">
-            <a class="media" href="#"><use href="#google"></use></a>
-        </svg>
-        <svg  class="icon social_media__icon">
-            <a class="media" href="#"><use href="#pinterest"></use></a>
-        </svg>
-        <svg  class="icon social_media__icon">
-            <a class="media" href="#"><use href="#instagram"></use></a>
-        </svg>
-        <svg  class="icon social_media__icon">
-            <a class="media" href="#"><use href="#stumbleupon"></use></a>
-        </svg>
-        <svg  class="icon social_media__icon">
-            <a class="media" href="#"><use href="#rss"></use></a>
-        </svg>
-
+        <a class="media" href="#">
+            <svg  class="icon facebook social_media__icon">
+                <use href="#facebook"></use>
+            </svg>
+        </a>
+        <a class="media" href="#">
+            <svg  class="icon social_media__icon">
+                <use href="#twitter"></use>
+            </svg>
+        </a>
+        <a class="media" href="#">
+             <svg  class="icon social_media__icon">
+               <use href="#google"></use>
+            </svg>
+        </a>
+        <a class="media" href="#">
+            <svg  class="icon social_media__icon">
+                <use href="#pinterest"></use>
+            </svg>
+        </a>
+        <a class="media" href="#">
+            <svg  class="icon social_media__icon">
+                <use href="#instagram"></use>
+            </svg>
+        </a>
+        <a class="media" href="#">
+            <svg  class="icon social_media__icon">
+                 <use href="#stumbleupon"></use>
+            </svg>
+        </a>
+        <a class="media" href="#">
+             <svg  class="icon social_media__icon">
+                <use href="#rss"></use>
+            </svg>
+        </a>
     </div>
 </section>
 <section class="tabs base_bg">
@@ -262,30 +275,43 @@
 </section>
 <footer class="footer _text-center">
     <div class="container ">
-        <svg class="footer__icon icon ">
-            <a class="media" href="#"><use href="#facebook"></use></a>
-        </svg>
-        <svg class="footer__icon icon ">
-            <a class="media" href="#"><use href="#twitter"></use></a>
-        </svg>
-        <svg class="footer__icon icon ">
-            <a class="media" href="#"><use href="#google"></use></a>
-        </svg>
-        <svg class="footer__icon icon ">
-            <a class="media" href="#"><use href="#pinterest"></use></a>
-        </svg>
-        <svg class="footer__icon icon ">
-            <a class="media" href="#"><use href="#instagram"></use></a>
-        </svg>
-        <svg class="footer__icon icon ">
-            <a class="media" href="#"><use href="#stumbleupon"></use></a>
-        </svg>
-        <svg class="footer__icon icon ">
-            <a class="media" href="#"><use href="#rss"></use></a>
-        </svg>
+        <a class="media" href="#">
+            <svg class="footer__icon icon ">
+                    <use href="#facebook"></use>
+            </svg>
+        </a>
+        <a class="media" href="#">
+            <svg class="footer__icon icon ">
+                    <use href="#twitter"></use>
+            </svg>
+        </a>
+        <a class="media" href="#">
+            <svg class="footer__icon icon ">
+                    <use href="#google"></use>
+            </svg>
+        </a>
+        <a class="media" href="#">
+             <svg class="footer__icon icon ">
+                    <use href="#pinterest"></use>
+             </svg>
+        </a>
+        <a class="media" href="#">
+             <svg class="footer__icon icon ">
+                    <use href="#instagram"></use>
+             </svg>
+        </a>
+        <a class="media" href="#">
+            <svg class="footer__icon icon ">
+                <use href="#stumbleupon"></use>
+            </svg>
+        </a>
+        <a class="media" href="#">
+            <svg class="footer__icon icon ">
+                <use href="#rss"></use>
+            </svg>
+        </a>
         <p class="footer__title">© 2015 Axure Themes</p>
     </div>
 </footer>
-
 </body>
 </html>
