--- a/grid.html
+++ b/grid.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles/grid-style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
+
     <title>Axit</title>
 </head>
 <body>
-<svg class="_icon">
+    <svg class="_icon">
     <symbol id="facebook" viewBox="0 0 320 512"><path d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z" ></path></symbol>
     <symbol id="twitter" viewBox="0 0 512 512"><path d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z" ></path></symbol>
     <symbol id="google" viewBox="0 0 640 512"><path d="M386.061 228.496c1.834 9.692 3.143 19.384 3.143 31.956C389.204 370.205 315.599 448 204.8 448c-106.084 0-192-85.915-192-192s85.916-192 192-192c51.864 0 95.083 18.859 128.611 50.292l-52.126 50.03c-14.145-13.621-39.028-29.599-76.485-29.599-65.484 0-118.92 54.221-118.92 121.277 0 67.056 53.436 121.277 118.92 121.277 75.961 0 104.513-54.745 108.965-82.773H204.8v-66.009h181.261zm185.406 6.437V179.2h-56.001v55.733h-55.733v56.001h55.733v55.733h56.001v-55.733H627.2v-56.001h-55.733z"></path></symbol>
@@ -17,19 +17,113 @@
     <symbol id="stumbleupon" viewBox="0 0 512 512"><path fill="currentColor" d="M502.9 266v69.7c0 62.1-50.3 112.4-112.4 112.4-61.8 0-112.4-49.8-112.4-111.3v-70.2l34.3 16 51.1-15.2V338c0 14.7 12 26.5 26.7 26.5S417 352.7 417 338v-72h85.9zm-224.7-58.2l34.3 16 51.1-15.2V173c0-60.5-51.1-109-112.1-109-60.8 0-112.1 48.2-112.1 108.2v162.4c0 14.9-12 26.7-26.7 26.7S86 349.5 86 334.6V266H0v69.7C0 397.7 50.3 448 112.4 448c61.6 0 112.4-49.5 112.4-110.8V176.9c0-14.7 12-26.7 26.7-26.7s26.7 12 26.7 26.7v30.9z" ></path></symbol>
     <symbol id="rss" viewBox="0 0 448 512"><path fill="currentColor" d="M128.081 415.959c0 35.369-28.672 64.041-64.041 64.041S0 451.328 0 415.959s28.672-64.041 64.041-64.041 64.04 28.673 64.04 64.041zm175.66 47.25c-8.354-154.6-132.185-278.587-286.95-286.95C7.656 175.765 0 183.105 0 192.253v48.069c0 8.415 6.49 15.472 14.887 16.018 111.832 7.284 201.473 96.702 208.772 208.772.547 8.397 7.604 14.887 16.018 14.887h48.069c9.149.001 16.489-7.655 15.995-16.79zm144.249.288C439.596 229.677 251.465 40.445 16.503 32.01 7.473 31.686 0 38.981 0 48.016v48.068c0 8.625 6.835 15.645 15.453 15.999 191.179 7.839 344.627 161.316 352.465 352.465.353 8.618 7.373 15.453 15.999 15.453h48.068c9.034-.001 16.329-7.474 16.005-16.504z"></path></symbol>
 </svg>
-<header class="header"></header>
-<section class="main"></section>
-<section class="social_media"></section>
-<section class="tabs"></section>
-<section class="benefit"></section>
-<section class="pricing"></section>
-<section class="reviews"></section>
-<section class="download"></section>
-<section class="contact"></section>
-<footer class="footer"></footer>
+    <header class="header">
+        <div class="container">
+            <div class="row header__template">
+                <img  class="header__logo" src="./assets/image/logo-1.png" alt="">
+                <nav class="nav">
+                    <a class="header__a-color" href="#">Features</a>
+                    <a class="header__a-color" href="#">About</a>
+                    <a class="header__a-color" href="#">Pricing</a>
+                    <a class="header__a-color" href="#">Reviews</a>
+                    <a class="header__a-color" href="#">Contact</a>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <section class="main">
+        <div class="main__bg">
+            <div class="container">
+                <div class="row main__template">
+                    <div>
+                        <img src="./assets/image/logo-1.png" alt="logo">
+                        <h2 class="_left_white">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h2>
+                        <p class="_light ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
+                        <a class="button _outline button_transform-scale">Download</a>
+                     </div>
+                   <div class="_text-center main__width">
+                       <div class="main__border_try">
+                           <h3>Try your <span class="free">free</span> trial today</h3>
+                       </div>
+                       <form>
+                           <div class="main__border_form">
+                               <input  class="main__field" type="text" placeholder="Name" name="Name">
+                               <input  class="main__field" type="email" placeholder="Email" name="email">
+                               <input class="main__field" type="password" placeholder="Password" name="password">
+                           </div>
+                           <div>
+                               <button  class="button main__button_get button_transform-color ">Get Started</button>
+                           </div>
+                       </form>
+                   </div>
+                </div>
+            </div>
+        </div>
 
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js" integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P" crossorigin="anonymous"></script>
+    </section>
+    <section class="social_media">
+        <div class="container row social_media__template">
+            <div>
+                <h3 class="social_media__h3">Social Media</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>Aenean euismod bibendum laoreet</p>
+            </div>
+            <div class="social_media-self">
+                <a class="media" href="#">
+                    <svg  class="icon facebook social_media__icon">
+                        <use href="#facebook"></use>
+                    </svg>
+                </a>
+                <a class="media" href="#">
+                    <svg  class="icon social_media__icon">
+                        <use href="#twitter"></use>
+                    </svg>
+                </a>
+                <a class="media" href="#">
+                    <svg  class="icon social_media__icon">
+                        <use href="#google"></use>
+                    </svg>
+                </a>
+                <a class="media" href="#">
+                    <svg  class="icon social_media__icon">
+                        <use href="#pinterest"></use>
+                    </svg>
+                </a>
+                <a class="media" href="#">
+                    <svg  class="icon social_media__icon">
+                        <use href="#instagram"></use>
+                    </svg>
+                </a>
+                <a class="media" href="#">
+                    <svg  class="icon social_media__icon">
+                        <use href="#stumbleupon"></use>
+                    </svg>
+                </a>
+                <a class="media" href="#">
+                    <svg  class="icon social_media__icon">
+                        <use href="#rss"></use>
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </section>
+    <section class="tabs base_bg">
+        <div class="container">
+            <div class="row">
+                <div class="_text-center">
+                    <div class="tabs__block1 active_bg tabs__text">Tab 1</div>
+                    <div class="grey_bg tabs__block2 tabs__text">Tab 2</div>
+                    <div class="grey_bg tabs__block3 tabs__text">Tab 3</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="benefit"></section>
+    <section class="pricing"></section>
+    <section class="reviews"></section>
+    <section class="download"></section>
+    <section class="contact"></section>
+    <footer class="footer"></footer>
+
 </body>
 </html>
